# Yavar-Hackathon-2025-Mohamed-Aashir-S

./: .gitignore  APPROACH.md  Problem_Statement_1_May_2025_Hackathon.docx  README.md  pyproject.toml  requirements.txt  run.py  setup.py
src/: main.py
src/extraction/: data_extractor.py  ocr_engine.py  table_extractor.py  table_formats.py
src/preprocessing/: advanced_preprocessor.py  image_processor.py
src/utils/: error_handler.py  invoice_generator.py  logger.py  pdf_converter.py
src/verification/: data_verifier.py
tests/: test_data_extractor.py  test_invoice_generator.py  test_invoice_processor.py  test_table_extractor.py
