[project]
name = "yavar-hackathon-2025-mohamed-aashir-s"
version = "0.1.0"
description = "Invoice data extraction and verification system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pytesseract>=0.3.13",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
    { index = "cu128" },
]
torchvision = [
    { index = "cu128" },
]

[[tool.uv.index]]
name = "cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
